--- a/index.html
+++ b/index.html
@@ -1,9 +1,14 @@
 <!DOCTYPE html>
 <html>
-<body>
-
-<h1>My First Heading</h1>
-<p>My first paragraph.</p>
-
-</body>
+  <head>
+    <meta charset="utf-8" />
+    <meta name="viewport" content="width=device-width" />
+    <title> hbkse </title>
+    <link rel="stylesheet" href="styles.css">
+  </head>
+  <body>
+      <div class="content">
+        <h1> hbkse </h1>
+      </div>
+  </body>
 </html>
