--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
       <div class="content">
         <h1> hbkse </h1>
         <h2> ひびかせ </h2>
+        <a href="/portal">portal</a>
       </div>
   </body>
 </html>
