--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
         <h1> hbkse </h1>
         <h2> ひびかせ </h2>
         <a href="/portal">portal</a>
+        <a href="/blog">blog</a>
       </div>
   </body>
 </html>
