--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
         <h2> ひびかせ </h2>
         <a href="/portal">portal</a>
         <a href="/blog">blog</a>
+        <a href="/billslaws">billslaws</a>
       </div>
   </body>
 </html>
